# bookish

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
booksi/: console.py  search.py
libget/: cli.py  search.py
src/: display.py  runner.py  search.py
tests/: test_cli.py
