[tool.poetry]
name = "bookish"
version = "0.1.0"
description = ""
authors = ["jgafnea <jgafnea@mail.com>"]
readme = "README.md"
packages = [ { include = "src" } ]
# include = [ "README.md" ]

[tool.poetry.dependencies]
python = "^3.10"
pyshorteners = "^1.0.1"
rich = "^13.7.1"
libgen-api = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Run `poetry install` after changing to make scripts available.
[tool.poetry.scripts]
bookish = 'src.runner:main'
